Spotted Salamander info + grammer

--- a/src/about.html
+++ b/src/about.html
@@ -65,7 +65,11 @@
       <a href="https://dec.ny.gov/nature/animals-fish-plants/amphibians-reptiles/eastern-red-spotted-newt" target="_blank"> Red-Spotted Newt Info (NY Department of Enviornmental Conservation)</a>
       <a href="https://sdzwildlifeexplorers.org/animals/salamander-and-newt" target="_blank"> Salamander VS Newt Info </a>
       <br>
-      <a href="" target="_blank"> - </a>
+      <a href="https://en.wikipedia.org/wiki/Mole_salamander" target="_blank"> Mole Salamander Wiki </a>
+      <a href="https://herpsofnc.org/spotted-salamander/" target="_blank"> Spotted Salamander Info </a>
+      <a href="https://en.wikipedia.org/wiki/Spotted_salamander" target="_blank"> Spotted Salamander Wiki </a>
+      <br>
+      <a href="" target="_blank">  </a>
       <br>
       <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish" target=”_blank” > Silly Salamander Image </a>
     </div>
