--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -20,7 +20,7 @@
       </h3>
 
       <p>
-        Salamanders are very unique slimy critters, they love spending their time near and in rivers and other bodies of water. You can often find them underneath rocks or damp leaf litter. They love being hydrated. Salamanders are very sensitive to pollutants or temperature variations, so an area with a lot of them tends to be a healthier and cleaner area! They’re known as environmental indicators and their presence or lack of it, indicates the quality of the environment. These amphibians should not be handled without great care. Their skin has a protective layer of mucus (similar to fish!) which keeps them hydrated and healthy. Handling can damage that barrier, so please don’t pick them up unless they need to be moved or aided. 
+        Salamanders are very unique slimy critters, they love spending their time near and in rivers and other bodies of water. You can often find them underneath rocks or damp leaf litter. They love being hydrated. Salamanders are very sensitive to pollutants or temperature variations, so an area with a lot of them tends to be a healthier and cleaner area! They’re known as environmental indicators and their presence or lack of it, indicates the quality of the environment. These amphibians should not be handled without great care. Their skin has a protective layer of mucus (similar to fish!) which keeps them hydrated and healthy. Handling can damage that barrier, so please don’t pick them up unless they need to be moved or aided. Some, in fact most, salamanders can regenerate parts of their bodies such as limbs or tails! 
       </p>
 
       <nav class="page-nav" aria-label="page nav"> 
@@ -65,10 +65,10 @@
       <br>
 
       <p>
-      Hellbenders are a threatened species. Eastern Hellbenders were once found in over 570 streams in the Eastern to Central U.S alone. Now their numbers have plummeted to only occupy 126 streams.
+      Hellbenders are a threatened species. Eastern hellbenders were once found in over 570 streams in the Eastern to Central U.S alone. Now their numbers have plummeted to only occupy 126 streams.
       </p>
       <p>
-      Human involvement has greatly harmed their numbers. Deforestation and pollution of waterways have stressed these delicate creates, causing them to even cannibalize their own young. Researches guess that they are eating their own eggs so that they can survive to breed another season, but we sadly cannot ask the Hellbenders directly. The only thing we can do is to advocate for safer logging and disposal practices. 
+      Human involvement has greatly harmed their numbers. Deforestation and pollution of waterways have stressed these delicate creates, causing them to even cannibalize their own young. Researches guess that they are eating their own eggs so that they can survive to breed another season, but we sadly cannot ask the hellbenders directly. The only thing we can do is to advocate for safer logging and disposal practices. 
       </p>
 
       <div id="red" class="center">
@@ -96,18 +96,59 @@
       Red-Spotted Newts, or Eastern Newts, despite their name, are still salamanders! All newts are salamanders but not all salamanders are newts. The word salamander defines amphibians that have tails as adults. While the word newt describes salamanders that spend a majority of their time on land.  
     </p>
     <p>
-      Red-Spotted Newts begin in the water, then spend their young adult stage as fully land-dwelling critters. The picture above is of a newt in the young adult, or eft stage. In this stage they are a bright red-orange color to deter predators from trying to eat them. They aren’t toxic unless you eat them! Not that you plan on eating any newts anytime soon. You’ll most commonly find the land-dwelling variant of these critters. They enjoy hiding under rocks and moist leaf litter.  
+      Red-spotted newts begin in the water, then spend their young adult stage as fully land-dwelling critters. The picture above is of a newt in the young adult, or eft stage. In this stage they are a bright red-orange color to deter predators from trying to eat them. They aren’t toxic unless you eat them! Not that you plan on eating any newts anytime soon. You’ll most commonly find the land-dwelling variant of these critters. They enjoy hiding under rocks and moist leaf litter.  
     </p>
     <br>
     <img src="/assets/newt2.png" alt="Image of a Red-Spotted Newt in the aquatic adult stage" />
     Kevin Stohlgren
 
     <p>
-      When they return to the water as full adults they gain a much different coloration. They turn brown or green to blend into lakes and rivers more easily. However the red spots on their backs remain! That’s how you can identify them no matter what stage you find one at. Pictured directly above is an adult Red-Spotted Newt.
+      When they return to the water as full adults they gain a much different coloration. They turn brown or green to blend into lakes and rivers more easily. However the red spots on their backs remain! That’s how you can identify them no matter what stage you find one at. Pictured directly above is an adult red-spotted newt.
     </p>
     <p>
       If you encounter one of these guys, they are safe to touch but keep handing to a minimum and only if you must! Their skin is very sensitive and the oils on human hands can harm these little ones if we handle them too much.
     </p>
+
+    <div id="spotted" class="center">
+        <h1> 
+          Spotted Salamander
+        </h1>
+      </div>
+        <h3>
+          (Ambystoma maculatum)
+        </h3>
+      <img src="/assets/spot1.png" alt="Image of a Spotted Salamander near a body of water with eggs in it" />
+      Todd Pierson
+
+      <div class="info">
+        <strong> Lifespan: </strong> 20-30 years
+        <strong> Size: </strong> 15 to 25 cm (5.9–9.8 in)
+        <strong> Range: </strong> Eastern US and Canada
+        <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
+        <strong> Stigma: </strong> Weird little guys!
+        <strong> Reality: </strong> Salamanders that burrow underground instead of hanging out in rivers! 
+      </div>
+     <br>
+     <br>
+     <p>
+      Spotted salamanders are a type of mole salamander who spend most of their time underground. Mole salamanders (genus Ambystoma) are characterized by their wide set eyes, flat heads, thick arms, and burrowing behavior. Some mole salamanders will even take over burrows made by other creatures instead of creating their own. If it’s not inhabited, it’s free game for these guys! Spotted salamanders and other mole salamanders only return to the water to breed. They will, more often than not, return to the body of water they were born in to have their own babies. 
+     </p>
+     <p>
+      Spotted salamanders have bright spots across their bodies, and the ones on their head tend to be more orange than yellow. They don’t differ much between male and female, but females tend to be bigger and sometimes have brighter spots along their bodies. These spots are a warning for predators to stay away! Spotted salamanders secrete a toxic liquid from their back and neck when threatened. 
+     </p>
+     <br>
+    <img src="/assets/spot2.png" alt="Image of a Spotted Salamander in some leaf litter" />
+    Ed Kanze
+    <p>
+      These salamanders have even been observed to recognize landmarks on their way to their breeding pools! Unlike other creatures, that use some sort of internal magnetic compass (ex: sea turtles), spotted salamanders observe their environments. Researchers found that spotted salamanders can associate visual landmarks with food. It’s similar to remembering where a sushi place is so you know where you’re going on your way to work!
+    </p>
+    <p>
+      Spotted salamanders are found primarily in forests with a majority of tree cover and well-drained soil. They will travel quite far to make it to their breeding pools, but primarily live underground in forests.
+    </p>
+    <p>
+      You are quite unlikely to meet these guys, but if you do, do not touch or bother them! 
+    </p>
+
 
 
 <div id="extras" class="center">
