--- a/src/spiders.html
+++ b/src/spiders.html
@@ -107,7 +107,7 @@
        <br>
        <br>
         <p>
-          Yellow garden spiders may be scary, but they’d rather run away than confront you! These spiders are homebodies and spend most of their time on their webs, waiting for prey to fall into them. However - the spiders you actually see on the webs are almost always female. Males are busy on the move looking for females and are observed much less often. Yellow garden spiders are sexually dimorphic, which means that the males and females look very different. Think of birds and how the males are always more colorful! In the spider world, its the opposite, females are big and colorful.
+          Yellow Garden Spiders may be scary, but they’d rather run away than confront you! These spiders are homebodies and spend most of their time on their webs, waiting for prey to fall into them. However - the spiders you actually see on the webs are almost always female. Males are busy on the move looking for females and are observed much less often. Yellow garden spiders are sexually dimorphic, which means that the males and females look very different. Think of birds and how the males are always more colorful! In the spider world, its the opposite, females are big and colorful.
         </p>
 
         <br>
