added some snake info

--- a/src/salamanders.html
+++ b/src/salamanders.html
@@ -26,7 +26,7 @@
       <nav class="page-nav" aria-label="page nav"> 
       <a href="#hell"> Hellbenders </a>
       <a href="#red"> Red Spotted Newt </a>
-      <a href="-"> Spotted Newt </a>
+      <a href="#spotted"> Spotted Newt </a>
       <a href="#extras"> Extras! </a>
     </nav>
 
