--- a/src/snakes.html
+++ b/src/snakes.html
@@ -20,15 +20,40 @@
         </h3>
 
         <p>
-          words
+          Snakes might be scary or spooky, but they’re actually very helpful! Without snakes, rats, mice, and other rodents would run wild and spread disease without any barriers. It is important to keep in mind that no animal is really a pest and everyone is just doing their part in a larger ecosystem! Snakes are widespread throughout the world and some of them even live in water. Many species are dangerous but many of them are not. If you encounter a snake, attempt to identify them before you interact! Snakes will bite even if they aren’t venomous as a defense mechanism. A good rule of thumb is to simply leave these guys where they are! If you find one inside your house, please call a professional or act with extreme caution. 
+        </p>
+        <p> 
+        <strong> (Please be weary with any snakes you know to be dangerous. Below there is a list of snakes that are actually dangerous.) </strong>
         </p>
 
         <nav class="page-nav" aria-label="page nav"> 
-        <a href="-"> Garter Snakes </a>
+        <a href="#garter"> Garter Snakes </a>
         <a href="-"> Milk Snakes </a>
         <a href="-"> Copper Heads </a>
         <a href="#extras"> Extras! </a>
         </nav>
+
+        <div id="garter" class="center">
+        <h1> 
+          Garter Snakes
+        </h1>
+      </div>
+        <h3>
+          (Cryptobranchus alleganiensis)
+        </h3>
+      <img src="/assets/hellbender.png" alt="Image of a Hellbender in a riverbed" />
+      Pete Oxford/Minden Pictures
+
+      <div class="info">
+        <strong> Lifespan: </strong> 30+ years (unknown)
+        <strong> Size: </strong> 30 to 74 cm (12 to 29 in)
+        <strong> Range: </strong> Eastern and Central US Rivers
+        <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
+        <strong> Stigma: </strong> Scary swamp monsters!
+        <strong> Reality: </strong> Soggy swamp puppies who just want to be left alone and moisturized. 
+      </div>
+     <br>
+     <br>
 
 
 <div id="extras" class="center">
