added snake info and meta image

--- a/src/about.html
+++ b/src/about.html
@@ -69,6 +69,12 @@
       <a href="https://herpsofnc.org/spotted-salamander/" target="_blank"> Spotted Salamander Info </a>
       <a href="https://en.wikipedia.org/wiki/Spotted_salamander" target="_blank"> Spotted Salamander Wiki </a>
       <br>
+      <a href="https://en.wikipedia.org/wiki/Garter_snake" target="_blank"> Garter Snake Wiki </a>
+      <a href="https://dnr.illinois.gov/education/wildaboutpages/wildaboutsnakes/wasnfamilynatricidae/wasnplainsgartersnake.html" target="_blank"> Garter Snake Info + Drew R. Davis Image </a>
+      <br>
+      <a href="https://en.wikipedia.org/wiki/Milk_snake" target="_blank"> Milk Snake Wiki </a>
+      <a href="https://www.iowaherps.com/species/lampropeltis_triangulum" target="_blank"> Milk Snake Info + Image </a>
+      <br>
       <a href="" target="_blank">  </a>
       <br>
       <a href="https://www.theguardian.com/technology/2018/nov/25/five-animals-that-can-regenerate-salamander-starfish" target=”_blank” > Silly Salamander Image </a>
