--- a/src/snakes.html
+++ b/src/snakes.html
@@ -28,8 +28,8 @@
 
         <nav class="page-nav" aria-label="page nav"> 
         <a href="#garter"> Garter Snakes </a>
-        <a href="-"> Milk Snakes </a>
-        <a href="-"> Copper Heads </a>
+        <a href="#milk"> Milk Snakes </a>
+        <a href="#copper"> Copper Heads </a>
         <a href="#extras"> Extras! </a>
         </nav>
 
@@ -39,21 +39,108 @@
         </h1>
       </div>
         <h3>
-          (Cryptobranchus alleganiensis)
+          (Thamnophis)
         </h3>
-      <img src="/assets/hellbender.png" alt="Image of a Hellbender in a riverbed" />
-      Pete Oxford/Minden Pictures
+      <img src="/assets/garter1.png" alt="Image of a garter snake on a rock." />
+      Drew R. Davis
 
       <div class="info">
-        <strong> Lifespan: </strong> 30+ years (unknown)
-        <strong> Size: </strong> 30 to 74 cm (12 to 29 in)
-        <strong> Range: </strong> Eastern and Central US Rivers
-        <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
-        <strong> Stigma: </strong> Scary swamp monsters!
-        <strong> Reality: </strong> Soggy swamp puppies who just want to be left alone and moisturized. 
+        <strong> Lifespan: </strong> 4-10 years (wild) 10-20 (captivity)
+        <strong> Size: </strong> 18 to 51 in (46 to 130 cm)
+        <strong> Range: </strong> North and Central America
+        <strong> Nocturnal or Diurnal: </strong> Diurnal, active during the day
+        <strong> Stigma: </strong>  Slimy garden pests!
+        <strong> Reality: </strong> Scaly garden helpers!
       </div>
      <br>
      <br>
+     <p>
+      Garter snakes are one of the most common snakes in America. Not only that, they are part of a fairly large family whose species and subspecies are debated by many researches. These snakes aren’t very aggressive towards humans and can co-exist fairly easily. They enjoy eating anything from bugs, worms, voles, rodents, and even some aquatic creatures. Their diet lends them to enjoying man-made gardens. They cannot really hurt humans, they don’t have any venom and their mouths are rather small. That being said, don’t bother the poor guys enough to try to bite you!
+     </p>
+     <p>
+      Garter snakes can be most easily identified by the stripe(s) down their body. They are typically dark brown with yellow or white stripes. They can have either one or two stripes depending on their species. They also usually have pale bellies. 
+     </p>
+     <br>
+     <img src="/assets/garter2.png" alt="An image of a smaller garter snake" />
+     Wikipedia
+     <br>
+     <p>
+      The name “garter snake” comes from their stripes being similar to garters, a piece of clothing worn by men or women to keep their socks up. Since the invention of elastic, garters are much less common. 
+     </p>
+     <p>
+      It was found by researchers that some species of garter snakes are not solitary, as previously believed. Some of them will actually live in groups, commonly of about 3 or 4 snakes but have been observed in groups as large as 46 snakes. 
+     </p>
+     <p>
+      Garter snakes enjoy spending their time basking in the sun on flat rocks. When they’re not hunting or basking, they’ll hide under rocks, logs or foliage. Garter snakes do not lay eggs, instead they give live birth, which is more common than one might guess in the snake world! 
+     </p>
+
+
+
+     <div id="milk" class="center">
+        <h1> 
+          Milk Snakes
+        </h1>
+      </div>
+        <h3>
+          (Lampropeltis triangulum)
+        </h3>
+      <img src="/assets/milk1.png" alt="Image of a milk snake on a granite slab." />
+      Reptiles and Amphibians of Iowa
+
+      <div class="info">
+        <strong> Lifespan: </strong> 3-12 (wild) 15-20 (captivity)
+        <strong> Size: </strong> 36-183 cm (14-72 inches) Vary greatly depending on species
+        <strong> Range: </strong> Central America down to Colombia and Ecuador
+        <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
+        <strong> Stigma: </strong> Scary, venomous snakes!
+        <strong> Reality: </strong> Fairly friendly mimics!
+      </div>
+     <br>
+     <br>
+     <p>
+      Milk snakes are a common type of snake that consists of 24 subspecies. These subspecies differ greatly in habitat, coloration, and size. Tropical subspecies tend to, on average, grow larger than temperate subspecies. Males and females tend to have similar size ranges. 
+     </p>
+     <p>
+      Their typical color pattern is alternating bands of red-black-yellow or white-black-red. However, red blotches instead of bands are seen in some populations. Some milk snakes have even evolved to mimic coral snakes! Coral snakes are very venomous and dangerous, while milk snakes are not. But their bright coloration will dissuade predators from messing with them. Mimicry is a  clever and useful tactic!
+     </p>
+     <br>
+     <img src="/assets/milk2.png" alt="A diagram depicting the difference between coral snakes(right) and milk snakes(left)" />
+     Seth Patterson
+     <br>
+     <p>
+      Milk snakes commonly enjoy making their homes in forests and open woodland, although they can be found many places. Some subspecies will migrate from warmer, wetter areas to cooler, drier areas to hibernate. Milk snakes tend to be pretty docile, they will usually try to run instead of attack first. These critters are known as “opportunistic eaters” which means they will eat almost anything they can find. Be that grubs, worms, bugs, small rodents, other snakes, lizards, or even birds and eggs! 
+     </p>
+     <p>
+      The name “milk snake” is said to come from farmers who often found these snakes living in their barns. They guessed that the snakes were there to drink from the cows! (It’s much more likely they were just there for the rodents that also lived in the barn.) 
+     </p>
+     <p>
+      Their gentle nature and eating habits make them popular pets. Although if you’re in the market for a friend, please buy from a breeder and do not disturb wild snakes!
+     </p>
+
+
+
+
+     <div id="copper" class="center">
+      <h1> 
+        Copperhead
+      </h1>
+    </div>
+      <h3>
+        (Lampropeltis triangulum)
+      </h3>
+    <img src="/assets/milk1.png" alt="Image of a milk snake on a granite slab." />
+    Reptiles and Amphibians of Iowa
+
+    <div class="info">
+      <strong> Lifespan: </strong> 3-12 (wild) 15-20 (captivity)
+      <strong> Size: </strong> 36-183 cm (14-72 inches) Vary greatly depending on species
+      <strong> Range: </strong> Central America down to Colombia and Ecuador
+      <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
+      <strong> Stigma: </strong> Scary, venomous snakes!
+      <strong> Reality: </strong> Fairly friendly mimics!
+    </div>
+   <br>
+   <br>
 
 
 <div id="extras" class="center">
