--- a/src/snakes.html
+++ b/src/snakes.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta name="description" content="An educational site about misunderstood creepy critters like spiders and snakes.">
+    <meta name="author" content="Samantha R Cooper">
+    <meta property="og:image" content="/assets/screenshot.png" />
 <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
