added copperhead + deadlist info

--- a/src/snakes.html
+++ b/src/snakes.html
@@ -32,7 +32,7 @@
         <nav class="page-nav" aria-label="page nav"> 
         <a href="#garter"> Garter Snakes </a>
         <a href="#milk"> Milk Snakes </a>
-        <a href="#copper"> Copper Heads </a>
+        <a href="#copper"> Copperheads </a>
         <a href="#extras"> Extras! </a>
         </nav>
 
@@ -125,31 +125,62 @@
 
      <div id="copper" class="center">
       <h1> 
-        Copperhead
+        Copperheads
       </h1>
     </div>
       <h3>
-        (Lampropeltis triangulum)
+        (Agkistrodon contortrix)
       </h3>
-    <img src="/assets/milk1.png" alt="Image of a milk snake on a granite slab." />
-    Reptiles and Amphibians of Iowa
+    <img src="/assets/copper1.png" alt="Image of a copperhead in some leaves." />
+    David Kenny/Getty Images Plus
 
     <div class="info">
-      <strong> Lifespan: </strong> 3-12 (wild) 15-20 (captivity)
-      <strong> Size: </strong> 36-183 cm (14-72 inches) Vary greatly depending on species
-      <strong> Range: </strong> Central America down to Colombia and Ecuador
-      <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night
-      <strong> Stigma: </strong> Scary, venomous snakes!
-      <strong> Reality: </strong> Fairly friendly mimics!
+      <strong> Lifespan: </strong> 18 (wild) 20 (captivity)
+      <strong> Size: </strong>  50 to 95 cm (20–37 in)
+      <strong> Range: </strong> Eastern North America
+      <strong> Nocturnal or Diurnal: </strong> Nocturnal, active during the night (Summer)
+      <strong> Stigma: </strong> Very dangerous, aggressive snakes!
+      <strong> Reality: </strong> Venomous snakes, who really just aren't big fans of humans.
     </div>
    <br>
    <br>
+   <p>
+    Copperheads are a venomous type of snake that occupy about half of U.S. states, classified as a pit viper. What makes a snake a pit viper is: being venomous and having a heat-sensing pit organ located between the eye and the nostril on both sides of the head. The eastern copperhead has distinctive, dark brown, hourglass-shaped markings, on top of a light reddish brown or brown/gray body. Their body type is heavy, rather than slender like other snakes. 
+   </p>
+   <p>
+    Copperheads enjoy occupying forests, woodlands, or even craggy rocks. They tend to hibernate in dens or cracks in rocks. These snakes, similar to other pit vipers, are ambush predators. They will use their superior camouflage to hide and strike when their prey gets close. As opposed to other vipers, copperheads tend to “freeze” as a defense mechanism. They will rely on their camouflage first before they attack. This method had caused many accidental incidents in which these poor critters are stepped on. So be careful where you step! Copperheads will also often rattle their tail to tell you to back off so if you hear that- don’t go any closer! If you do happen to be bitten by a copperhead, seek medical attention. Copperhead bites account for half of the treated snake bites in the United States.
+   </p>
+   <br>
+     <img src="/assets/copper2.png" alt="A photo of a copperhead camoflaging themselves in some leafs" />
+     WCWR
+     <br>
+    <p>
+      Uniquely, these snakes alter their sleep schedule depending on the season. During the hot summer months, they’ll become nocturnal to escape the daytime heat. While in the other, colder months, they will have a diurnal cycle instead to be warmer during the day. 
+    </p>
+    <p>
+      Copperheads will eat many creatures humans consider pests, such as rodents or other critters that may cause harm to house and home. They eat invertebrates as well, such as bugs or worms. Juveniles eat more invertebrates while adults eat more vertebrates, although that’s simply because vertebrates tend to be larger.
+    </p>
+    <p>
+      Please do not engage with any copperhead snakes! They are dangerous and although beautiful, should not be disturbed. If you encounter one, give it space and back off. They’re often times just spooked by such a big creature. 
+    </p>
+
 
 
 <div id="extras" class="center">
         <h1> 
           Extras!
         </h1>
+
+        <h3>
+          9 of the Most Dangerous Snakes (do not go near!!)
+        </h3>
+        <br>
+        <div class=center>
+        <a href="https://www.britannica.com/list/9-of-the-worlds-deadliest-snakes"> 
+        <img alt="Image of a Brittanica Webpage for 9 of the World's Deadliest Snakes" src="/assets/danger2.png" /></a>
+        <br>
+        Britannica, John P. Rafferty
+        </div>
 
         <h1>
           User Submissions
